--- a/assets/css/ui-kit/inputs.css
+++ b/assets/css/ui-kit/inputs.css
@@ -169,17 +169,56 @@
     width: 16px;
     height: 6px;
 }
-
 .input-tertiary::-webkit-scrollbar-track {
     background: transparent;
 }
-
 .input-tertiary::-webkit-scrollbar-thumb {
     transition: background-color 0.3s ease, border-color 0.3s ease;
     background-color: var(--gray_3);
     border-radius: 4px;
 }
-
 .input-tertiary::-webkit-scrollbar-thumb:hover {
     background-color: var(--gray_2);
+}
+
+
+/* Tertiary Select */
+.select-tertiary {
+    min-width: 250px;
+    min-height: 40px;
+    padding: 4px 12px 4px 16px;
+    box-sizing: border-box;
+    border: 1px solid var(--gray_6);
+    outline: 1px solid var(--gray_0);
+    background-color: var(--gray_6);
+    color: var(--gray_-6);
+    border-radius: 6px;
+
+    appearance: none; /* Убираем стандартную стрелку */
+    background-image: url('data:image/svg+xml;charset=US-ASCII,<svg xmlns="http://www.w3.org/2000/svg" width="10" height="5"><polygon points="0,0 10,0 5,5" fill="%23666"/></svg>');
+    background-repeat: no-repeat;
+    background-position: right 12px center;
+    background-size: 10px 5px;
+
+    transition: background-color 0.3s ease, border-color 0.3s ease, outline-color 0.3s ease;
+
+}
+.select-tertiary:hover {
+    border: 1px solid var(--orange_-1);
+    outline: 1px solid var(--orange_-1);
+    background-color: var(--gray_6);
+}
+.select-tertiary:focus {
+    border-color: var(--orange_0);
+    background-color: var(--orange_5);
+}
+.select-tertiary.has-value:not(:focus) {
+    border-color: var(--gray_6);
+    background-color: var(--orange_5);
+}
+
+.select-tertiary.has-value:hover {
+    border-color: var(--orange_-1);
+    outline-color: var(--orange_-1);
+    background-color: var(--orange_5);
 }
